--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -767,9 +767,11 @@ header .encabezado__contenido .navegacion-principal .navbar-collapse .navbar-nav
 }
 .receta__fila--encabezado {
   background-color: rgb(46, 16, 73);
-  color: rgb(209, 183, 204);
+  color: rgb(146, 113, 146);
   font-weight: bold;
-  border-bottom: 2px solid black;
+}
+.receta__fila--encabezado .receta__columna {
+  color: inherit;
 }
 .receta__columna {
   font-size: 1.1rem;
