--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -885,4 +885,20 @@ body {
   font-style: italic;
 }
 
+.boton-whatsapp {
+  animation: whats 1s infinite ease-in-out;
+}
+
+@keyframes whats {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 /*# sourceMappingURL=estilos.css.map */
