--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -53,3 +53,23 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: italic;
 }
+
+.boton-whatsapp {
+    animation: whats 1s infinite ease-in-out;
+}
+
+// ANIMACIONES //
+
+@keyframes whats {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.3);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
